[gd_scene load_steps=8 format=3 uid="uid://cebnlrav52xed"]

[ext_resource type="Script" uid="uid://5xet58ycep0c" path="res://Script/GameOver.gd" id="1_lofy6"]
[ext_resource type="Texture2D" uid="uid://cpckk5gtbtjxl" path="res://Sprite/Button/RE_NG.png" id="2_8wu08"]
[ext_resource type="Texture2D" uid="uid://4wyidjmaty5q" path="res://Sprite/Button/StampResult.png" id="2_cga12"]
[ext_resource type="Texture2D" uid="uid://ctbfwupdqltyr" path="res://Sprite/Button/RE_G.png" id="3_cga12"]
[ext_resource type="Texture2D" uid="uid://gmdlxw4k4pjn" path="res://Sprite/Button/StamperTool.png" id="3_oddlb"]
[ext_resource type="Texture2D" uid="uid://gxt1tbjc1b1i" path="res://Sprite/Button/MENU_NG.png" id="4_oddlb"]
[ext_resource type="Texture2D" uid="uid://c4xgpn8q4uf7y" path="res://Sprite/Button/MENU_G.png" id="5_nxxts"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lofy6")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="StampContainer" type="Node2D" parent="."]

[node name="StampResult" type="Sprite2D" parent="StampContainer"]
position = Vector2(626.50006, 286.5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_cga12")

[node name="StamperTool" type="Sprite2D" parent="StampContainer"]
position = Vector2(623.5, 294.5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_oddlb")

[node name="TryAgainButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 163.0
offset_top = 506.0
offset_right = 601.0
offset_bottom = 725.0
texture_normal = ExtResource("2_8wu08")
texture_pressed = ExtResource("3_cga12")
texture_hover = ExtResource("3_cga12")
ignore_texture_size = true
stretch_mode = 5

[node name="MenuButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 688.0
offset_top = 479.0
offset_right = 1119.6584
offset_bottom = 745.0
texture_normal = ExtResource("4_oddlb")
texture_pressed = ExtResource("5_nxxts")
texture_hover = ExtResource("5_nxxts")
ignore_texture_size = true
stretch_mode = 5

[connection signal="mouse_entered" from="TryAgainButton" to="." method="_on_try_again_button_mouse_entered"]
[connection signal="pressed" from="TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="mouse_entered" from="MenuButton" to="." method="_on_menu_button_mouse_entered"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
